fix: reduce text contrast for light-theme

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -121,6 +121,7 @@ body {
       ),
       #f7f7f7;
     background-size: auto 4px;
+    color: #222;
 
     @include light-theme-links;
   }
